# simple_data_base

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  compile_commands.json  format.sh  lint.sh
python/client/: pyproject.toml
python/client/src/simple_data_base_pyclient/: column.py  connection.py  core.py  query.py  sender.py
server/core/: deserializer.cpp  fdstream.cpp  hashable.cpp  logger.cpp  row.cpp  serialize.cpp  table.cpp  types.cpp  utils.cpp  value.cpp
server/core/include/: case.hpp  copyable.hpp  deserializer.hpp  fdstream.hpp  hashable.hpp  logger.hpp  meta.hpp  serialize.hpp  stream.hpp  stringable.hpp  unit.hpp  utils.hpp
server/driver/: main.cpp  network.cpp
server/driver/include/: network.hpp
server/persistent/: database.cpp  schema.cpp  storage.cpp  table.cpp  utils.cpp
server/persistent/include/: database.hpp  schema.hpp  storage.hpp  table.hpp  utils.hpp
server/query/: ast.cpp  compute.cpp  deserialize.cpp  execute.cpp
server/query/include/: ast.hpp
server/test/: case.cpp  context.cpp  errors.cpp  main.cpp
server/test/hash/: collision.cpp
server/test/include/: case.hpp  context.hpp  errors.hpp
server/test/persistent/: schema.cpp  table.cpp
server/test/query/: filter.cpp  select.cpp
server/test/serialize-and-deserialize/: int.cpp  row.cpp  size.cpp  string.cpp  value.cpp
