[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_data_base_pyclient"
requires-python = ">=3.11"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"simple_data_base_pyclient" = ["py.typed"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "too-few-public-methods"
]
